[package]
name = "native-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "napi4"] }
napi-derive = "2"
ethers-core = "2"
ethers-signers = { version = "2", default-features = false }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
